--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # will have compiled files and executables
 /target/
 
+/.idea/
+
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
 Cargo.lock
@@ -15,4 +17,7 @@ Cargo.lock
 # already existing elements were commented out
 
 /target
+/.idea
 #Cargo.lock
+
+.env
