travis ci config update

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ before_cache:
 branches:
   only:
   - "/^v\\d+\\.\\d+\\.\\d+.*$/"
-  - master
+  - main
 notifications:
   email:
     on_success: never
