--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,10 @@ features = [
 ]
 version = "0.9.0-rc.0"
 
+[target.'cfg(linux)'.dependencies.openssl]
+version = "0.10"
+features = ["vendored"]
+
 [[bin]]
 path = "src/bin/beep.rs"
 name = "beep"
