--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,12 @@ matrix:
     rust: nightly
   - env: TARGET=x86_64-pc-windows-gnu
     rust: nightly
+  - env: TARGET=i686-pc-windows-gnu
+    rust: nightly
+  - env: TARGET=i686-pc-windows-msvc
+    rust: nightly
+  - env: TARGET=x86_64-pc-windows-msvc
+    rust: nightly
   - env: TARGET=x86_64-unknown-linux-gnu
     rust: nightly
 before_install:
