--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -25,7 +25,7 @@ jobs:
         run: cargo build --release --verbose
       - name: Create zip files
         run: |
-          Compress-Archive -Path ./target/release/royalguard.exe, ./info_sample.json -DestinationPath Beep-x86-pc-windows-msvc.zip
+          Compress-Archive -Path ./target/release/beep.exe, ./info_sample.json -DestinationPath Beep-x86-pc-windows-msvc.zip
       - name: Upload binaries
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
