--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
         run: cross build --target ${{ matrix.target }} --release --verbose
       - name: Create zip files
         run: |
-          zip -j Beep-${{ matrix.target }} target/${{ matrix.target }}/release/beep info_sample.json
+          zip -j Beep-${{ matrix.target }} target/${{ matrix.target }}/release/beep
       - name: Upload binaries
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
