--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 
 [dependencies]
 tokio = { version = "0.2", features = ["macros"] }
-pretty_env_logger = "0.3"
+tracing-subscriber = "0.2.12"
 log = "0.4"
 kankyo = "0.2"
 toml = "0.5"
@@ -25,6 +25,8 @@ futures = "0.3"
 #branch = "master"
 
 [dependencies.serenity]
+git = "https://github.com/serenity-rs/serenity"
+branch = "current"
 default-features = false
 features = [
     "builder",
@@ -38,7 +40,7 @@ features = [
     "utils",
     "rustls_backend",
 ]
-version = "0.9.0-rc.0"
+version = "0.9.0-rc.1"
 
 [target.'cfg(linux)'.dependencies.openssl]
 version = "0.10"
